tests/baselines/reference/newOperatorErrorCases.errors.txt
==== tests/cases/compiler/newOperatorErrorCases.ts (4 errors) ====
    
    class C0 {
    
    }
    class C1 {
        constructor(n: number, s: string) { }
    }
    
    class T<T> {
        constructor(n?: T) { }
    }
    
    var anyCtor: {
        new (): any;
    };
    
    var anyCtor1: {
        new (n): any;
    };
    
    interface nestedCtor {
        new (): nestedCtor;
    }
    var nestedCtor: nestedCtor;
    
    // Construct expression with no parentheses for construct signature with > 0 parameters
    var b = new C0 32, ''; // Parse error
                   ~~
!!! newOperatorErrorCases.ts(27,16): error TS1005: ',' expected.
    
    // Generic construct expression with no parentheses
    var c1 = new T;
    var c1: T<{}>;
    var c2 = new T<string>; // Parse error
                          ~
!!! newOperatorErrorCases.ts(32,23): error TS1003: Identifier expected.
                   ~~~~~~
!!! newOperatorErrorCases.ts(32,16): error TS2095: Could not find symbol 'string'.
    
    
    // Construct expression of non-void returning function
    function fnNumber(): number { return 32; }
    var s = new fnNumber(); // Error
                ~~~~~~~~
!!! newOperatorErrorCases.ts(37,13): error TS2084: Call signatures used in a 'new' expression must have a 'void' return type.
    